--- a/starter.css
+++ b/starter.css
@@ -90,6 +90,7 @@ picture {
   margin: 0;
 }
 
+/* Reset Font Weights */
 h1,
 h2,
 h3,
@@ -105,7 +106,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   font-size: 62.5%;
 }
-
+/* set up the body  version 1*/
 body {
   font-family: sans-serif;
   line-height: 1;
@@ -113,7 +114,7 @@ body {
   color: #555;
 }
 
-/* set up the body */
+/* set up the body version 2 choose version according to you*/
 body {
   line-height: 1.5;
   min-height: 100vh;
